[package]
name = "llama-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "RagIQ_RuntimeEngine"
crate-type = ["cdylib"]
path = "src/lib.rs"

[[bin]]
name = "RagIQ-RuntimeEngine"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
rand = "0.8"

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
debug = false
strip = true
codegen-units = 1
panic = "abort"
lto = "thin"
incremental = false

